♻️ Allow editor to set initial value